# apart-eval-hackathon

./: .gitignore  README.md  pyproject.toml
apart_eval_hackathon/: SCAN_standard.txt  analysis.ipynb  analyze_last_letter_result.py  aqua_least_to_most.py  drop.ipynb  drop_least_to_most.py  drop_number_samples.csv  drop_span_samples.csv  english_words.py  english_words.txt  last_letter_least_to_most.py  least_to_most.py  make_drop_samples.py  uncommon_english_words.txt
apart_eval_hackathon/data/: SCAN_ltm.txt  aqua_rat_results.csv  drop_ltm_decomposition.txt  drop_ltm_solving.txt  drop_samples.pkl  last_letter_least_to_most_100.pickle  result_table.csv
